SERVER-52639 Fail resharding operation if new shard key includes array